tests/Project1/student_test/test_1_s04.out
Error type A at Line 2: unknown lexeme 0a
Error type A at Line 3: unknown lexeme @
Error type A at Line 4: unknown lexeme |
Error type A at Line 5: unknown lexeme 00
Error type B at Line 5: Missing semicolon ';'
