tests/Project1/student_test/test_1_s04.spl
int test5(int a,int b){
    float 0a = 0.35;
    int a = a@b;
    int b0 = a|b;
    int c =00
}